packages/components/tree/style/index.less
@import '../../style/variable/index.less';
@import '../../style/mixins/reset.less';
@import './mixin.less';

.@{tree-prefix} {
  .reset-component();

  font-size: var(--ix-font-size-sm);
  background-color: var(--ix-tree-bg-color);
  border-radius: var(--ix-border-radius-sm);

  &-content-inner {
    display: flex;
    flex-flow: column wrap;
  }

  &-focused:not(:hover):not(&-active) {
    background-color: var(--ix-color-container-bg-active);
  }

  &-auto-height {
    height: 100%;

    .@{tree-prefix}-content {
      height: 100%;
    }
  }

  &-blocked {
    .@{tree-node-prefix} {
      transition: background-color var(--ix-motion-duration-medium);

      &-active:not(&-disabled),
      &-selected:not(&-disabled) {
        background-color: var(--ix-tree-node-bg-color-selected);

        &:hover {
          background-color: var(--ix-tree-node-bg-color-hover);
          .@{tree-node-prefix}-content {
            background-color: var(--ix-tree-node-bg-color-hover);
          }
        }
      }

      &:hover {
        background-color: var(--ix-tree-node-bg-color-hover);

        .@{tree-node-prefix} {
          &-draggable-icon {
            opacity: 1;
          }

          &-content {
            background-color: var(--ix-tree-node-bg-color-hover);
          }
        }
      }

      &-content {
        flex: auto;
      }
    }
  }

  &-show-line {
    .@{tree-node-prefix} {
      &-last {
        .@{tree-node-prefix}-leaf-line {
          &::before {
            bottom: 50%;
          }
        }
      }

      &-expand {
        position: relative;
        color: var(--ix-tree-expand-icon-color);

        &-top-line {
          position: absolute;
          height: calc(var(--ix-tree-node-content-height) / 2 - 4px);
          top: calc((var(--ix-tree-node-content-height) / 4 - 4px) * -1);
          right: 50%;
          .vertical-line();
        }
        &-bottom-line {
          position: absolute;
          height: calc(var(--ix-tree-node-content-height) / 2 - 4px);
          bottom: calc((var(--ix-tree-node-content-height) / 4 - 4px) * -1);
          right: 50%;
          .vertical-line();
        }

        &::after {
          position: absolute;
          top: calc(50% - var(--ix-line-width) / 2);
          right: 0;
          width: calc((var(--ix-tree-node-icon-width) - var(--ix-font-size-icon)) / 2);
          z-index: 1;
          .horizontal-line();

          content: ' ';
        }
      }

      &:not(&-expanded):not(&-last) {
        .@{tree-node-prefix}-expand {
          &::before {
            position: absolute;
            top: calc(var(--ix-tree-node-content-height) - 6px);
            right: 50%;
            height: calc(var(--ix-tree-node-content-height) / 2 - 4px);
            z-index: 1;
            .vertical-line();

            content: ' ';
          }
        }
      }
    }

    .@{tree-node-prefix}-indent {
      align-self: stretch;
      white-space: nowrap;

      &-unit {
        position: relative;
        height: 100%;

        &::before {
          position: absolute;
          top: calc(var(--ix-tree-node-padding-vertical) * -1);
          right: calc(var(--ix-tree-node-icon-width) / 2);
          bottom: calc(var(--ix-tree-node-padding-vertical) * -1);
          .vertical-line();

          content: '';
        }
      }
    }
  }

  &-empty {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &:not(&-virtual) &-content {
    overflow: auto;
  }
}

.@{tree-node-prefix} {
  position: relative;
  display: flex;
  align-items: center;
  padding: var(--ix-tree-node-padding-vertical) 0;
  white-space: nowrap;

  .@{icon-prefix} {
    font-size: var(--ix-font-size-icon);
  }

  &-indent {
    &-noop-unit,
    &-unit {
      display: inline-block;
      width: var(--ix-tree-node-icon-width);
    }
  }

  &-draggable-icon {
    cursor: pointer;
    opacity: 0.4;
    transition: opacity var(--ix-motion-duration-medium) var(--ix-motion-ease-in-out);
    width: var(--ix-tree-node-icon-width);
    height: var(--ix-tree-node-content-height);
    display: flex;
    align-items: center;
    justify-content: center;

    &-noop {
      width: var(--ix-tree-node-icon-width);
    }
  }

  &-expand {
    width: var(--ix-tree-node-icon-width);
    height: var(--ix-tree-node-content-height);
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;

    &-noop {
      cursor: default;
    }
  }

  & &-checkbox {
    margin: var(--ix-tree-node-checkbox-margin);
  }

  &-leaf {
    width: var(--ix-tree-node-icon-width);
    align-self: stretch;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: default;

    &-line {
      position: relative;
      z-index: 1;
      display: block;
      height: 100%;
      width: 100%;

      &::before {
        position: absolute;
        top: calc(var(--ix-tree-node-padding-vertical) * -1);
        right: calc(var(--ix-tree-node-icon-width) / 2);
        bottom: calc(var(--ix-tree-node-padding-vertical) * -1);
        .vertical-line();

        content: ' ';
      }

      &::after {
        position: absolute;
        top: calc(50% - var(--ix-line-width));
        bottom: 0;
        left: 50%;
        right: 0;
        .horizontal-line();

        content: ' ';
      }
    }
  }

  &-content {
    position: relative;
    display: inline-flex;
    cursor: pointer;
    min-height: var(--ix-tree-node-content-height);
    line-height: var(--ix-tree-node-content-height);
    transition: background-color var(--ix-motion-duration-medium);
    padding: var(--ix-tree-node-content-padding);

    &:hover {
      background-color: var(--ix-tree-node-bg-color-hover);
    }

    &-prefix,
    &-suffix {
      display: flex;
      justify-items: center;
      align-items: center;
    }

    &-label {
      display: inline-block;
      flex-grow: 1;
      padding: var(--ix-tree-node-content-label-padding);

      &-highlight {
        color: var(--ix-tree-node-content-label-highlight-color);
      }
    }
  }

  &-active:not(&-disabled) .@{tree-node-prefix}-content {
    background-color: var(--ix-tree-node-bg-color-hover);
  }

  &-selected:not(&-disabled) .@{tree-node-prefix}-content {
    background-color: var(--ix-tree-node-bg-color-selected);
    color: var(--ix-tree-node-color-selected);

    &:hover {
      background-color: var(--ix-tree-node-bg-color-hover);
    }
  }

  &-disabled .@{tree-node-prefix}-content {
    color: var(--ix-color-text-disabled);
    cursor: not-allowed;

    &:hover {
      background: transparent;
    }
  }

  &-drop-parent,
  &-drop-inside,
  &-drop-before .@{tree-node-prefix}-content,
  &-drop-after .@{tree-node-prefix}-content {
    position: relative;
    &::after {
      content: ' ';
      position: absolute;
      top: 0;
      left: 0;
      height: 100%;
      width: 100%;
    }
  }

  &-drop-parent::after,
  &-drop-inside::after {
    border: var(--ix-tree-drop-line-width) solid var(--ix-tree-drop-line-color);
  }

  &-drop-before .@{tree-node-prefix}-content::after {
    border-top: var(--ix-tree-drop-line-width) solid var(--ix-tree-drop-line-color);
  }
  &-drop-after .@{tree-node-prefix}-content::after {
    border-bottom: var(--ix-tree-drop-line-width) solid var(--ix-tree-drop-line-color);
  }
}

